Fix scrollbar background color

--- a/src/themes/_common/player/gallery-sidebar.scss
+++ b/src/themes/_common/player/gallery-sidebar.scss
@@ -93,7 +93,7 @@
         }
         /* Track */
         &::-webkit-scrollbar-track {
-            background: #000; // << will be background of the track
+            background: #1f1f1f; // << will be background of the track
         }
         /** Firefox only */
         scrollbar-color: #b3b3b3 #000000;
